Updated compatibility matrix 2026-02-11

--- a/static/compatibilities/external-secrets.yaml
+++ b/static/compatibilities/external-secrets.yaml
@@ -51,7 +51,17 @@ versions:
   kube: ['1.34']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: [Helm chart bumped from 1.1.0 (noted in app v1.1.1 release notes)
+        to 1.2.0 (noted in app v1.2.1 release notes).]
+    features: ['Infisical provider: added caBundle and caProvider support for custom/cluster
+        CA handling.', 'Doppler provider: added configurable retry settings.', 'BeyondTrust
+        provider: enabled pushing secrets to BeyondTrust.', 'Password generator: can
+        generate and expose multiple passwords.', 'Oracle provider: implemented SecretExists
+        check/behavior.', 'Helm chart: added dynamic labelSelector when topologySpreadConstraints
+        labelSelector is not defined.']
+    breaking_changes: []
   chart_version: 1.2.1
   images: ['ghcr.io/external-secrets/external-secrets:v1.2.1']
 - version: 1.1.1
@@ -84,7 +94,27 @@ versions:
   kube: ['1.34']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: [Helm chart release/update is included for v0.20.4 (from v0.20.3)
+        but v1.0.0 notes provided do not include specific chart value/key changes
+        beyond one default normalization and internal chart cleanups mentioned in
+        PR titles., 'Chart-related changes called out: removed unused values from
+        the chart (in v0.20.4) and normalized the default certificate duration value
+        (in v1.0.0).']
+    features: [Dynamic target implementation for ExternalSecret sources (new dynamic
+        target behavior/implementation)., 'esoctl: new bootstrap generator commands
+        to help generate bootstrap manifests/config for generators.', 'Generators:
+        added a hex generator.', 'AWS Secrets Manager: ability to define a resource
+        policy via metadata.', E2E managed tests were re-implemented (improves test
+        coverage/reliability rather than user-facing runtime behavior).]
+    breaking_changes: ['Possible Helm values impact: chart removed unused values (if
+        you set any of those keys, Helm will now ignore/possibly error depending on
+        tooling) and the default certificate duration value was normalized (could
+        change effective cert validity if you relied on the previous implicit default).',
+      'Go module separation/internal build changes (generally not runtime-breaking
+        for users, but could affect downstream builds/forks or custom images if you
+        vendor/import ESO modules).']
   chart_version: 1.0.0
   images: ['oci.external-secrets.io/external-secrets/external-secrets:v1.0.0']
 - version: 0.20.4
@@ -311,7 +341,20 @@ versions:
     '1.20', '1.19']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: []
+    features: ['New provider integrations: Infisical, Device42, and Bitwarden Secret
+        Manager.', 'GCP PushSecret: support specifying a location/region for pushed
+        secrets.', 'AWS SSM Parameter Store: support setting parameter Type, and reduce
+        API calls (fetch once).', 'ClusterSecretStore: namespaceConditions now support
+        glob patterns for namespace matching.', 'PushSecret: add logic to skip unmanaged
+        stores; support pushing whole Kubernetes Secrets to Google Cloud Secret Manager
+        and Azure Key Vault.', 'Kubernetes provider: add AuthRef support for improved
+        auth configuration.', 'Logging: add log.level and log.encoding options across
+        components.', 'cert-controller performance/scaling: allow restricting CRDs/webhooks
+        in informer cache; enable partial cache when installCRDs=true.']
+    breaking_changes: []
   chart_version: 0.9.20
   images: ['ghcr.io/external-secrets/external-secrets:v0.9.20']
 - version: 0.8.7
