--- a/static/compatibilities/keda.yaml
+++ b/static/compatibilities/keda.yaml
@@ -22,6 +22,7 @@ versions:
   incompatibilities: []
   summary: null
   chart_version: 2.17.0
+  eolAt: '2026-02-02'
 - version: 2.16.0
   kube: ['1.31', '1.30', '1.29']
   requirements: []
