--- a/static/compatibilities/kube-prometheus-stack.yaml
+++ b/static/compatibilities/kube-prometheus-stack.yaml
@@ -5,12 +5,37 @@ readme_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/m
 helm_repository_url: https://prometheus-community.github.io/helm-charts
 chart_changelog_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/refs/heads/main/charts/kube-prometheus-stack/UPGRADE.md
 versions:
+- version: 81.6.2
+  kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
+    '1.25']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: ['Bumps kube-prometheus-stack chart dependencies with non-major
+        updates (Renovate PR #6637). No direct template/value changes called out in
+        the release notes.']
+    features: ["Dependency refresh only; pulls in upstream patch/minor releases of\
+        \ subcharts or bundled components without changing the chart\u2019s major\
+        \ version behavior."]
+    breaking_changes: [None mentioned in the provided release notes; this appears
+        to be a non-major dependency update only.]
+  chart_version: 81.6.2
+  images: ['docker.io/bats/bats:1.13.0', 'docker.io/grafana/grafana:12.3.2', 'ghcr.io/jkroepke/kube-webhook-certgen:1.7.6',
+    'quay.io/kiwigrid/k8s-sidecar:2.5.0', 'quay.io/prometheus-operator/prometheus-operator:v0.88.1',
+    'quay.io/prometheus/alertmanager:v0.31.0', 'quay.io/prometheus/node-exporter:v1.10.2',
+    'quay.io/prometheus/prometheus:v3.9.1', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.18.0']
 - version: 81.6.1
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
     '1.25']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: ["Dependency non-major updates only (Renovate/autoclosed PRs);\
+        \ chart package size changed slightly (853 KB \u2192 850 KB)."]
+    features: []
+    breaking_changes: []
   chart_version: 81.6.1
   images: ['docker.io/bats/bats:1.13.0', 'docker.io/grafana/grafana:12.3.2', 'ghcr.io/jkroepke/kube-webhook-certgen:1.7.6',
     'quay.io/kiwigrid/k8s-sidecar:2.5.0', 'quay.io/prometheus-operator/prometheus-operator:v0.88.1',
