--- a/static/compatibilities/velero.yaml
+++ b/static/compatibilities/velero.yaml
@@ -23,32 +23,30 @@ versions:
   summary:
     helm_changes: ''
     chart_updates: []
-    features: ['Modernized fs-backup to a micro-service architecture, enabling concurrency
-        control, cancel/resume, and resilience to node-agent restarts while stabilizing
-        node-agent resource usage.', 'fs-backup now supports Windows workloads by
-        running data mover pods on Windows nodes, completing full Windows backup/restore
-        coverage alongside CSI snapshot data movement from 1.16.', 'Added beta support
-        for Kubernetes Volume Group Snapshots for both CSI snapshot backup and CSI
-        snapshot data movement to enable point-in-time, write-order-consistent snapshots
-        across multiple volumes.', 'Added PriorityClassName support across Velero
-        components (server, node-agent, data mover pods, maintenance jobs) for better
-        scheduling control.', 'Improved data mover scalability and resiliency with
-        prepare-queue smoothing (PrepareQueueLength), restart-resume/orphan-cancel
-        handling, and symmetric node-selection for restore plus per-storage-class
-        node-selection.', Extended resource policies with reusable include/exclude
-        filters (includeExcludePolicy) in addition to volumePolicy., 'Operational
-        improvements including BSL availability metric/status checks, imagePullSecrets
-        inheritance for VGDP/maintenance jobs, and updated dependencies (Go 1.24.6,
-        Kopia 0.21.1).']
-    breaking_changes: ["Restic uploader path is removed: `--uploader-type=restic`\
-        \ is no longer valid for installation and you can\u2019t create new restic-based\
-        \ backups; restores from existing restic backups remain supported only until\
-        \ v1.19.", Repository maintenance job settings were removed from Velero server
-        flags; configuration must move to the repository maintenance job ConfigMap
-        (flags like --keep-latest-maintenance-jobs and maintenance job resource request/limit
-        flags are no longer accepted)., 'Restore behavior change: when restoring PVCs,
-        Velero now always removes the `selected-node` annotation if no node mapping
-        exists (previously it might be preserved if the node existed).']
+    features: ['Modernized fs-backup to a micro-service architecture, adding concurrency
+        control, cancel/resume, better robustness across node-agent restarts, and
+        steadier node-agent resource usage.', fs-backup now supports Windows workloads
+        (data mover pods can run on Windows nodes) completing Windows backup/restore
+        coverage alongside CSI snapshot data movement introduced in 1.16., 'Adds beta
+        support for Kubernetes Volume Group Snapshots for both CSI snapshot backup
+        and CSI snapshot data movement to enable point-in-time, write-order-consistent
+        snapshots across multiple volumes.', 'Adds PriorityClass support across Velero
+        components (server, node-agent, data mover pods, and repo maintenance jobs)
+        so you can control scheduling priority per module.', 'Improves data mover
+        scalability/resiliency with node-agent PrepareQueueLength to throttle pod
+        creation, better restart/orphan handling to resume or cancel correctly, and
+        restore node-selection plus storage-class-specific node selection for CSI
+        snapshot data movement.', 'Adds reusable resource-policy include/exclude filters
+        (includeExcludePolicy) in addition to existing volumePolicy, letting multiple
+        backups share consistent resource filtering rules.']
+    breaking_changes: ['Restic path for fs-backup is removed: `--uploader-type=restic`
+        is no longer a valid install config; you can restore existing restic-based
+        backups only until v1.19.', 'Repository maintenance job configuration flags
+        were removed from the velero server (`--keep-latest-maintenance-jobs`, `--maintenance-job-*`
+        cpu/mem request/limit); these settings must be provided via the maintenance
+        job ConfigMap (with limited CLI fallback depending on parameter).', 'PVC restore
+        behavior change: selected-node annotation is always removed during PVC restore
+        when no node mapping exists (previously preserved if the node existed).']
   chart_version: 11.3.2
   images: ['docker.io/bitnamilegacy/kubectl:1.35', 'velero/velero:v1.17.1']
 - version: 1.16.0
@@ -59,27 +57,32 @@ versions:
   summary:
     helm_changes: ''
     chart_updates: []
-    features: ['Windows cluster support: Velero components (node-agent, data mover
-        pods, maintenance jobs) can run on Windows nodes and Velero can back up/restore
-        Windows workloads, with current limitations (no fs-backup on Windows; no security
-        descriptors/NTFS xattrs).', "Parallel ItemBlock backup: backup engine can\
-        \ process grouped resource \u201Citem blocks\u201D concurrently via a worker\
-        \ pool to improve throughput; pre/post hooks run as part of item blocks.",
-      'Data mover restore scalability for WaitForFirstConsumer PVs: new node-agent
-        setting `ignoreDelayBinding` allows restores to spread across nodes instead
-        of being constrained to the attached node.', 'Data mover observability improvements:
-        more intermediate status/error logging for backup/restore and cleanup failures.',
-      'CSI snapshot usability improvement: VolumeSnapshotContent is no longer retained
-        in backups, avoiding unnecessary sync/restore of CSI objects across clusters.',
-      'Backup repository maintenance improvements: maintenance history recorded in
-        BackupRepository CR (RecentMaintenance), jobs are recaptured after server
-        restart, maintenance/init skipped for readOnly BSLs, and configurable `fullMaintenanceInterval`
-        (normalGC/fastGC/eagerGC).', 'Volume Policy enhancement: can filter volumes
-        by PVC labels (and additional CSI VolumeAttributes filtering).', Per-object
-        resource status restore control via annotation `velero.io/restore-status`.,
-      'Velero restore-helper binaries merged into the main Velero image (single image
-        contains velero, velero-helper, velero-restore-helper).']
-    breaking_changes: []
+    features: ['Parallel Item Block backup: backups (and associated pre/post hooks)
+        can process item blocks concurrently; configurable via `--item-block-worker-count`
+        (default 1).', 'Windows cluster support: Velero can run in Windows/hybrid
+        clusters; node-agent, data mover pods, and maintenance jobs can schedule on
+        Linux/Windows nodes; built as a hybrid all-in-one image.', 'Data mover restore
+        scalability: optional spreading of WaitForFirstConsumer restores across nodes
+        via new node-agent config flag `ignoreDelayBinding`.', 'Improved observability
+        for data mover: more detailed logs/status outputs for intermediate objects
+        and cleanup failures (enabled automatically).', 'CSI snapshot usability: VolumeSnapshotContent
+        is no longer retained in backups, reducing cross-cluster sync/restore noise.',
+      'Backup repository maintenance resiliency/observability: `RecentMaintenance`
+        history on BackupRepository CR, recapture running jobs after server restart,
+        skip maintenance/repo init for readOnly BSL, configurable maintenance cadence
+        via `fullMaintenanceInterval`.', 'Volume Policy enhancement: can filter volumes
+        by PVC labels.', 'Per-object resource status restore: opt-in/out per object
+        via `velero.io/restore-status` annotation.', 'Restore helper merged into main
+        Velero image: `velero`, `velero-helper`, and `velero-restore-helper` included
+        in one image.']
+    breaking_changes: ['Restic deprecation began in 1.15: using Restic uploader for
+        fs-backup continues to work but emits warnings; plan migration away from Restic
+        path.', 'Repository maintenance configuration preference changed in 1.15:
+        settings moved from server flags to a repository maintenance configMap; if
+        both are set, the configMap values take precedence.', 'node-agent configMap
+        name became configurable in 1.15: must set `node-agent-configmap` flag if
+        you do not use the default name.', Changing PVC selected-node feature deprecated
+        in 1.15 and may be removed in future releases; avoid relying on it.]
   chart_version: 10.1.3
   images: ['docker.io/bitnamilegacy/kubectl:1.35', 'velero/velero:v1.16.2']
 - version: 1.15.0
@@ -90,32 +93,32 @@ versions:
   summary:
     helm_changes: ''
     chart_updates: []
-    features: ['Data mover micro service: CSI snapshot data movement shifts from node-agent
-        pods to dedicated backup/restore pods, improving security (no hostPath), per-operation
-        resource control, and resiliency.', Introduces Item Block concepts and ItemBlockAction
-        (IBA) plugins to categorize correlated resources into blocks for future multi-threaded
-        backup processing (single-threaded in 1.15)., 'Adds node selection for repository
-        maintenance jobs via a new repository maintenance ConfigMap, allowing scheduling
-        onto preferred/idle nodes.', 'Adds backupPVC configuration via a new ConfigMap,
-        including read-only mounting (can speed up expose for some storage like Ceph)
-        and ability to choose a different storageClass for backupPVCs.', Adds backup
-        repository cache limit configuration via a new backup repository ConfigMap
-        to control client-side cache usage and avoid pod eviction from ephemeral storage
-        pressure., 'Performance improvements: fixes server memory leak after plugin
-        calls; passes client QPS/burst args through to plugins; includes upstream
-        Kopia maintenance memory improvements.']
-    breaking_changes: ['Restic uploader path for filesystem backups enters deprecation
-        in 1.15: backups/restores still succeed but warnings appear when using --uploader-type=restic
-        or restic-based fs-backup paths.', Node-agent configuration ConfigMap name
-        is no longer fixed; you must set the node-agent server parameter --node-agent-configmap
-        if using a non-default name., 'Repository maintenance job settings are moving
-        from server flags to a repository maintenance job configuration ConfigMap;
-        if both are set, ConfigMap values take precedence (flags retained for backward
-        compatibility).', Changing PVC selected-node feature is deprecated and not
-        recommended; it will be removed in a future release., 'Known issue: read-only
-        backupPVC may fail on SELinux due to upstream Kubernetes behavior; workaround
-        requires running backupPod container as super-privileged with SELinux disabled
-        (may conflict with PSA policies).']
+    features: ['Data mover micro service for CSI snapshot data movement: data transfer
+        now runs in dedicated per-backup/per-restore pods instead of node-agent, improving
+        security (no hostPath), resource isolation, and resiliency.', "Item Block\
+        \ concepts and new ItemBlockAction (IBA) plugin type: Velero can group correlated\
+        \ resources (e.g., Pods/PVCs) into \u201Citem blocks\u201D and categorize\
+        \ them via built-in/custom IBAs; groundwork for future multi-threaded backups.",
+      'Node selection for repository maintenance jobs: new repository maintenance
+        configuration ConfigMap lets you steer maintenance jobs to specific nodes
+        and control their resource usage.', 'BackupPVC enhancements for data mover:
+        new Backup PVC configuration ConfigMap supports read-only mounts (can speed
+        up expose on some storage like Ceph) and choosing a distinct StorageClass
+        for backupPVCs.', 'Backup repository cache limit configuration: new backup
+        repository configuration ConfigMap can cap client-side cache usage to avoid
+        eviction from ephemeral storage pressure.', 'Performance/stability improvements:
+        fixes a server memory leak after plugin calls; server QPS/burst settings are
+        passed to plugins; Kopia maintenance memory use improved via upstream merges.']
+    breaking_changes: ['Restic is deprecated for filesystem backups (fs-backup): workflows
+        still work in 1.15 but emit warnings when using restic uploader type or restic
+        path; plan migration to Kopia/uploader alternatives per deprecation policy.',
+      'node-agent configuration ConfigMap name is no longer hard-coded: you must set
+        the server parameter `--node-agent-configmap` if you use a non-default name.',
+      'Repository maintenance job settings are moving from server flags to a repository
+        maintenance ConfigMap: ConfigMap values take precedence when both are set
+        (legacy flags still accepted for backward compatibility).', Changing PVC selected-node
+        feature is deprecated and will be removed in a future release; avoid relying
+        on it.]
   chart_version: 8.7.2
   images: ['docker.io/bitnami/kubectl:1.35', 'velero/velero:v1.15.2']
 - version: 1.14.0
@@ -126,30 +129,28 @@ versions:
   summary:
     helm_changes: ''
     chart_updates: []
-    features: [Kopia/Restic repository maintenance is now executed via separate Kubernetes
-        Jobs to reduce Velero server pod memory pressure and OOM risk; install can
-        specify job resource requests., 'VolumePolicies now support actions (e.g.,
-        `fs-backup` vs `snapshot`) to control how specific volumes are protected,
-        enabling fine-grained opt-in/opt-out without modifying workloads.', Data movement
-        backups support node selection via ConfigMap to constrain where datamover
-        pods can run., Restore operations now persist VolumeInfo metadata and `velero
-        restore describe` shows more volume-level detail (including CSI snapshot restores).,
-      Restores gain a new `Finalizing` phase so PV patching/label restoration and
-        post-restore hooks occur after volume data movement completes., Azure plugin
-        adds certificate-based service principal authentication (phishing-resistant)
-        alongside secret-based auth., 'Runtime/deps updated (Go 1.22.2, Kopia 0.17.0;
-        Azure SDK library migrations; AWS SDK updated to leverage newer identity mechanisms).']
-    breaking_changes: [CSI plugin is now built-in/merged into the main Velero repo
-        and installed by default; do not install it via `--plugins` anymore or you
-        may conflict/duplicate., 'Default resource requests/limits for node-agent
-        are removed, making node-agent pods BestEffort QoS; clusters that relied on
-        prior defaults must set explicit resources to avoid starvation.', 'Namespace
-        filtering behavior changes when `includedNamespaces`/`excludedNamespaces`
-        are unset but `labelSelector`/`orLabelSelectors` are set: backups now include
-        only namespaces containing matching resources (previously all namespaces were
-        included).', PV patching during the new `Finalizing` phase can cause restores
-        to end `PartiallyFailed` when PVs remain `Pending` (previously might report
-        `Complete`).]
+    features: [Repository maintenance for kopia/restic backup repositories is moved
+        out of the main Velero pod into separate Kubernetes Jobs to prevent Velero
+        OOM kills and allow setting job resource requests., 'VolumePolicies now support
+        additional actions (e.g., `fs-backup` and `snapshot`) so you can control per-volume
+        backup method without modifying workloads.', 'Node selection for data-movement
+        (datamover) pods via a ConfigMap, letting you constrain heavy/long-running
+        pods to specific nodes.', Restore now persists VolumeInfo metadata for restored
+        volumes; `velero restore describe` output includes this extra volume-handling
+        detail., Restores add a new `Finalizing` phase so PV label patching and post-restore
+        hooks occur after volume data movement/snapshot restores complete., 'Azure:
+        adds certificate-based Service Principal authentication option (phishing-resistant),
+        alongside secret-based auth.']
+    breaking_changes: [CSI plugin is merged into the Velero repo and installed by
+        default as an internal plugin; do not install the CSI plugin via `--plugins`
+        during `velero install` in 1.14., Default resource requests/limits for the
+        node-agent are removed; node-agent pods become BestEffort QoS unless you set
+        resources explicitly., 'Backup namespace filtering changes: if `includedNamespaces`/`excludedNamespaces`
+        are unset but `labelSelector`/`orLabelSelectors` are set, only namespaces
+        containing matching resources are included (previously all namespaces were
+        included).', 'Restore behavior change: PV patching in the new `Finalizing`
+        state can cause restores to end `PartiallyFailed` when PVs are blocked in
+        `Pending` (previously might report `Complete`).']
   chart_version: 7.2.2
   images: ['docker.io/bitnami/kubectl:1.35', 'velero/velero:v1.14.1']
 - version: 1.13.0
