--- a/static/compatibilities.yaml
+++ b/static/compatibilities.yaml
@@ -15799,178 +15799,59 @@ addons:
   helm_repository_url: https://raw.githubusercontent.com/Dynatrace/dynatrace-operator/main/config/helm/repos/stable
   versions:
   - version: 1.8.1
-    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
-      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
+    kube: ['1.35']
     requirements: []
     incompatibilities: []
     summary: null
     chart_version: 1.8.1
     images: []
   - version: 1.8.0
-    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
-      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
+    kube: ['1.35']
     requirements: []
     incompatibilities: []
     summary: null
     chart_version: 1.8.0
     images: []
   - version: 1.7.0
-    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
-      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
+    kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26']
     requirements: []
     incompatibilities: []
     summary: null
     chart_version: 1.7.0
     images: []
-  - version: 1.6.0
-    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
-      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 1.6.0
-    images: []
-  - version: 1.5.0
-    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
-      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 1.5.0
-    images: []
   - version: 1.4.0
-    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
-      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
+    kube: ['1.25']
     requirements: []
     incompatibilities: []
     summary: null
     chart_version: 1.4.0
     images: []
   - version: 1.3.0
-    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
-      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
+    kube: ['1.24']
     requirements: []
     incompatibilities: []
     summary: null
     chart_version: 1.3.0
     images: []
-  - version: 1.2.0
-    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
-      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 1.2.0
-    images: []
-  - version: 1.1.0
-    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
-      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 1.1.0
-    images: []
   - version: 1.0.0
-    kube: ['1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21',
-      '1.20', '1.19']
+    kube: ['1.23', '1.22']
     requirements: []
     incompatibilities: []
     summary: null
     chart_version: 1.0.0
     images: []
-  - version: 0.15.0
-    kube: ['1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21',
-      '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.15.0
-    images: []
-  - version: 0.14.0
-    kube: ['1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21',
-      '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.14.0
-    images: []
-  - version: 0.13.0
-    kube: ['1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20',
-      '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.13.0
-    images: []
   - version: 0.12.0
-    kube: ['1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20',
-      '1.19']
+    kube: ['1.21']
     requirements: []
     incompatibilities: []
     summary: null
     chart_version: 0.12.0
     images: []
-  - version: 0.11.0
-    kube: ['1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.11.0
-    images: []
-  - version: 0.10.0
-    kube: ['1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.10.0
-    images: []
-  - version: 0.9.0
-    kube: ['1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.9.0
-    images: []
-  - version: 0.8.0
-    kube: ['1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.8.0
-    images: []
-  - version: 0.7.0
-    kube: ['1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.7.0
-    images: []
   - version: 0.6.0
-    kube: ['1.23', '1.22', '1.21', '1.20', '1.19']
+    kube: ['1.20', '1.19']
     requirements: []
     incompatibilities: []
     summary: null
     chart_version: 0.6.0
-    images: []
-  - version: 0.5.0
-    kube: ['1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.5.0
-    images: []
-  - version: 0.4.0
-    kube: ['1.23', '1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.4.0
-    images: []
-  - version: 0.3.0
-    kube: ['1.22', '1.21', '1.20', '1.19']
-    requirements: []
-    incompatibilities: []
-    summary: null
-    chart_version: 0.3.0
     images: []
   name: dynatrace-operator
